# akairo

./: .gitignore  CMakeLists.txt  README.md
src/: akairo.cpp  akairo.hpp
src/Components/: Position.hpp  PositionComponent.hpp
src/Components/Color/: Color.cpp  Color.hpp
src/Components/Position/: Position.cpp  Position.hpp
src/Components/Size/: Size.cpp  Size.hpp
src/Core/Graphics/: IGraphicsHandler.hpp  Interface.hpp  OpenGL.cpp  OpenGL.hpp
src/Core/Renderer/: IRenderer.cpp  IRenderer.hpp  ImGui.cpp  ImGui.hpp  Interface.cpp  Interface.hpp
src/Elements/: Element.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
src/UI/: Element.cpp  Element.hpp  Elements.cpp
src/UI/Components/: Element.hpp  Elements.cpp  Position.hpp
src/UI/Components/Color/: Color.cpp  Color.hpp
src/UI/Components/Position/: Position.cpp  Position.hpp
src/UI/Components/Rounding/: Rounding.cpp  Rounding.hpp
src/UI/Components/Shapes/: Rectangle.cpp  Shape.hpp
src/UI/Components/Size/: Size.cpp  Size.hpp
src/UI/Layout/: FlexibleContainer.cpp  FlexibleContainer.hpp  Layer.cpp  Layer.hpp
src/UI/Shapes/: Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp
src/Utils/: BoundingRect.hpp  Vectors.hpp
